--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -12,8 +12,12 @@
     <a href="/dashboard" class="text-white text-decoration-none">
       <h1>TrentoArena</h1>
     </a>
-    <a class="nav-link" href="#" style="margin-left: 15px;"><img src="/images/lenteRicerca.png"
-        style="height: 60px; width: auto;"></a>
+    <a class="nav-link" href="#" style="margin-left: 15px;">
+      <div class="d-flex flex-column align-items-center">
+        <img src="/images/search.png" alt="Cerca" style="height: 40px; width: auto; filter: brightness(0) invert(1);">
+        <span style="font-size: 12px;">Cerca</span>
+      </div>
+    </a>
     <div class="flex-grow-1 d-flex justify-content-end">
       <a class="nav-link" href="#" style="margin-right: 60px;" onclick="
         event.preventDefault();
