--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -52,6 +52,13 @@
           <span style="font-size: 12px;">Mappa</span>
         </div>
       </a>
+      <a class="nav-link" href="/leaderboard.html" style="margin-right: 60px;">
+        <div class="d-flex flex-column align-items-center">
+          <img src="/images/trophy.png" alt="Classifica"
+            style="height: 40px; width: auto; filter: brightness(0) invert(1);">
+          <span style="font-size: 12px;">Classifica</span>
+        </div>
+      </a>
       <a class="nav-link" href="#" style="margin-right: 60px;" onclick="
         event.preventDefault();
         const cssPathReq = '/css/friend_requests_popup.css';
