Add "remove friend" button

--- a/src/frontend/user_profile.html
+++ b/src/frontend/user_profile.html
@@ -145,10 +145,31 @@
                             const hasSentRequest = user.friendRequests && user.friendRequests.some(r => r._id === currentUser._id || r === currentUser._id);
 
                             if (isFriend) {
-                                addFriendBtn.textContent = 'Friends';
+                                addFriendBtn.textContent = 'Remove Friend';
                                 addFriendBtn.classList.remove('btn-primary');
-                                addFriendBtn.classList.add('btn-success');
-                                addFriendBtn.disabled = true;
+                                addFriendBtn.classList.add('btn-danger');
+                                addFriendBtn.disabled = false;
+
+                                addFriendBtn.onclick = async () => {
+                                    if (!confirm('Are you sure you want to remove this friend?')) return;
+
+                                    try {
+                                        const res = await fetch(`/api/users/${currentUser._id}/friends/${user._id}`, {
+                                            method: 'DELETE'
+                                        });
+
+                                        if (res.ok) {
+                                            alert('Friend removed.');
+                                            window.location.reload();
+                                        } else {
+                                            const err = await res.json();
+                                            alert('Error: ' + err.message);
+                                        }
+                                    } catch (e) {
+                                        console.error('Error removing friend:', e);
+                                        alert('Failed to remove friend.');
+                                    }
+                                };
                             } else if (hasSentRequest) {
                                 addFriendBtn.textContent = 'Request Sent';
                                 addFriendBtn.classList.remove('btn-primary');
