--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -231,8 +231,8 @@
                                             datasets: [{
                                                 label: `${sportName} ELO`,
                                                 data: data,
-                                                borderColor: '#0d6efd', // Bootstrap primary
-                                                backgroundColor: 'rgba(13, 110, 253, 0.1)',
+                                                borderColor: 'rgba(255, 159, 64, 1)',
+                                                backgroundColor: 'rgba(255, 159, 64, 0.2)',
                                                 tension: 0.3,
                                                 fill: true,
                                                 pointRadius: 5,
