Add friend section in leaderboard

--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -30,6 +30,17 @@
                     <div class="card-body p-4">
                         <h2 class="text-center fw-bold mb-4" style="color: rgb(223, 103, 5);">Classifica</h2>
 
+                        <div class="d-flex justify-content-center mb-4">
+                            <div class="btn-group" role="group" aria-label="Leaderboard Type">
+                                <input type="radio" class="btn-check" name="lbType" id="lbGlobal" autocomplete="off"
+                                    checked>
+                                <label class="btn btn-outline-primary" for="lbGlobal">Global</label>
+
+                                <input type="radio" class="btn-check" name="lbType" id="lbFriends" autocomplete="off">
+                                <label class="btn btn-outline-primary" for="lbFriends">Friends</label>
+                            </div>
+                        </div>
+
                         <div class="mb-4">
                             <label for="sportFilter" class="form-label fw-bold">Seleziona Sport:</label>
                             <select id="sportFilter" class="form-select">
