--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -12,7 +12,27 @@
     <a href="/dashboard" class="text-white text-decoration-none">
       <h1>TrentoArena</h1>
     </a>
-    <a class="nav-link" href="#" style="margin-left: 15px;">
+    <a class="nav-link" href="#" style="margin-left: 15px;" onclick="
+        event.preventDefault();
+        const cssPathSearch = '/css/search_popup.css';
+        const jsPathSearch = '/js/search_popup.js';
+        
+        if (!document.querySelector(`link[href='${cssPathSearch}']`)) {
+            const link = document.createElement('link');
+            link.rel = 'stylesheet';
+            link.href = cssPathSearch;
+            document.head.appendChild(link);
+        }
+        
+        if (window.SearchPopupInstance) {
+            window.SearchPopupInstance.show();
+        } else {
+            const script = document.createElement('script');
+            script.src = jsPathSearch;
+            script.onload = () => window.SearchPopupInstance.show();
+            document.body.appendChild(script);
+        }
+    ">
       <div class="d-flex flex-column align-items-center">
         <img src="/images/search.png" alt="Cerca" style="height: 40px; width: auto; filter: brightness(0) invert(1);">
         <span style="font-size: 12px;">Cerca</span>
