Improve user_profile

--- a/src/frontend/user_profile.html
+++ b/src/frontend/user_profile.html
@@ -32,10 +32,11 @@
                         style="width: 250px; height: 250px; object-fit: cover; border: 5px solid #fff; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
                 </div>
                 <h1 id="username" class="fw-bold mt-4 mb-2 display-6">Loading...</h1>
-                <button id="addFriendBtn" class="btn btn-primary mt-2" style="display: none;">Add Friend</button>
-                <br>
-                <button id="reportUserBtn" class="btn btn-outline-danger mt-3 btn-sm" style="display: none;">Report
-                    User</button>
+                <div class="d-flex justify-content-center gap-2 mt-2">
+                    <button id="addFriendBtn" class="btn btn-primary" style="display: none;">Add Friend</button>
+                    <button id="reportUserBtn" class="btn btn-outline-danger btn-sm" style="display: none;">Report
+                        User</button>
+                </div>
             </div>
 
             <!-- Middle Column: User Details -->
