Refactor all popups

--- a/src/frontend/dashboard.html
+++ b/src/frontend/dashboard.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/game_creation_popup.css">
     <link rel="stylesheet" href="css/game_popup.css">
     <link rel="stylesheet" href="css/game_popup_participants.css">
+    <link rel="stylesheet" href="css/popup_shared.css">
+    <script src="js/popup_manager.js"></script>
 
     <style>
         .img-rotonda {
