--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/game_popup.css">
     <link rel="stylesheet" href="css/game_popup_participants.css">
+    <link rel="stylesheet" href="css/popup_shared.css">
+    <script src="js/popup_manager.js"></script>
     <style>
         #map {
             height: 100vh;
