--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -7,6 +7,8 @@
     <title>Leaderboard - TrentoArena</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/popup_shared.css">
+    <script src="/js/popup_manager.js"></script>
     <style>
         .leaderboard-img {
             width: 40px;
