--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/game_popup.css">
     <link rel="stylesheet" href="css/game_popup_participants.css">
+    <link rel="stylesheet" href="css/popup_shared.css">
+    <script src="js/popup_manager.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 
